* Bổ sung: nội dung email * Bổ sung: họ, tên khi đăng ký

--- a/common/v1/css/main.css
+++ b/common/v1/css/main.css
@@ -390,6 +390,7 @@ footer {
 	color: #09f;
 }
 
-.birthday .form-control {
-	width: 30%;
+.form-group .name .col-sm-6 {
+	padding-right: 0;
+	padding-left: 0;
 }
