bổ sung form tư vấn và thay logo

--- a/common/v1/css/main.css
+++ b/common/v1/css/main.css
@@ -367,6 +367,12 @@ footer {
 	background-image: url(../img/mh_icon.png);
 }
 
+.copyright .logo-vnedu {
+	width: 150px;
+	background-size: 120px 47px;
+	background-image: url(../img/vnedu_icon.png);
+}
+
 .copyright .logo-vnptmedia {
 	width: 185px;
 	background-size: 183px 48px;
@@ -410,4 +416,8 @@ footer {
 
 .read-more a {
 	color: #333;
+}
+
+#form-consult .checkbox {
+	color: #eee;
 }
