- Trang chủ: thêm phần testimonial - Bổ sung bước: xác nhận thanh toán - Mail: thay đổi nội dung mail nâng cấp tài khoản

--- a/common/v1/css/main.css
+++ b/common/v1/css/main.css
@@ -1,6 +1,87 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 @import url('ec.css');
 
+.text-left-not-xs, .text-left-not-sm, .text-left-not-md, .text-left-not-lg {
+    text-align: left;
+}
+.text-center-not-xs, .text-center-not-sm, .text-center-not-md, .text-center-not-lg {
+    text-align: center;
+}
+.text-right-not-xs, .text-right-not-sm, .text-right-not-md, .text-right-not-lg {
+    text-align: right;
+}
+.text-justify-not-xs, .text-justify-not-sm, .text-justify-not-md, .text-justify-not-lg {
+    text-align: justify;
+}
+
+@media (max-width: 767px) {
+    .text-left-not-xs, .text-center-not-xs, .text-right-not-xs, .text-justify-not-xs {
+        text-align: inherit;
+    }
+    .text-left-xs {
+        text-align: left;
+    }
+    .text-center-xs {
+        text-align: center;
+    }
+    .text-right-xs {
+        text-align: right;
+    }
+    .text-justify-xs {
+        text-align: justify;
+    }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+    .text-left-not-sm, .text-center-not-sm, .text-right-not-sm, .text-justify-not-sm {
+        text-align: inherit;
+    }
+    .text-left-sm {
+        text-align: left;
+    }
+    .text-center-sm {
+        text-align: center;
+    }
+    .text-right-sm {
+        text-align: right;
+    }
+    .text-justify-sm {
+        text-align: justify;
+    }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+    .text-left-not-md, .text-center-not-md, .text-right-not-md, .text-justify-not-md {
+        text-align: inherit;
+    }
+    .text-left-md {
+        text-align: left;
+    }
+    .text-center-md {
+        text-align: center;
+    }
+    .text-right-md {
+        text-align: right;
+    }
+    .text-justify-md {
+        text-align: justify;
+    }
+}
+@media (min-width: 1200px) {
+    .text-left-not-lg, .text-center-not-lg, .text-right-not-lg, .text-justify-not-lg {
+        text-align: inherit;
+    }
+    .text-left-lg {
+        text-align: left;
+    }
+    .text-center-lg {
+        text-align: center;
+    }
+    .text-right-lg {
+        text-align: right;
+    }
+    .text-justify-lg {
+        text-align: justify;
+    }
+}
 
 @font-face {
 	font-family: "Titillium Web";
@@ -356,7 +437,6 @@ h1.heading, h2.heading, h3.heading, h4.heading, h5.heading, h6.heading {
 
 footer {
 	background: #eee;
-	margin-top: 20px;
 	padding-bottom: 20px;
 }
 
@@ -404,6 +484,8 @@ footer {
 	background-image: url(../img/vnpt_icon.png);
 }
 
+
+.testimonial-section,
 .guarantee-section {
 	background: #555;
 	-moz-box-shadow:    inset 0 0 10px #000000;
@@ -411,6 +493,7 @@ footer {
 	box-shadow:         inset 0 0 10px #000000;
 }
 
+.testimonial-section h4.media-heading,
 .guarantee-section .description .small-heading {
 	color: #09f;
 }
@@ -439,4 +522,24 @@ footer {
 
 #form-consult .checkbox {
 	color: #eee;
+}
+
+.testimonial-section {
+	margin-top: 20px;
+	padding: 20px;
+}
+
+.testimonial-section .media-object {
+	width: 128px;
+	border-radius: 6px;
+}
+
+.testimonial-section .media-body {
+	color: #e0e0e0;
+	font-size: 85%;
+}
+
+footer .navbar-text {
+	margin-top: 0;
+	margin-bottom: 0;
 }
